<resources>
    <string name="app_name">StretchYOURBody</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="start">Zaczynamy!</string>
    <string name="next">Następne</string>
    <string name="previous">Poprzednie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="stoper_start">Start</string>
    <string name="stoper_stop">Pauza</string>
    <string name="stoper_reset">Reset</string>

    <string name="select_exercise">Wybierz ćwiczenie</string>
    <string name="zarejestruj">ZAREJESTRUJ</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="zarejestruj_komunikat">Brak konta? Zarejestruj teraz!</string>
    <string name="haslo">Hasło</string>
</resources>