<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ExerciseActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/exercise_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeaderView" />


            <ImageView
                android:id="@+id/exercise_image"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/main_color"
                android:padding="7dp"
                app:layout_collapseMode="parallax" />



            <TextView
                android:id="@+id/time_view"
                style="@style/NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/start_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/MyButtonStyle"
                    android:text="@string/stoper_start"

                    />

                <Button
                    android:id="@+id/stop_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/stoper_stop"
                    style="@style/MyButtonStyle"
                    android:layout_gravity="center"
                    />

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/stoper_reset"
                    style="@style/MyButtonStyle"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/exercise_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/NormalText" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>